<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfprodisplaybold"
            android:gravity="center"
            android:text="@string/add_expiry_details"
            android:textColor="@color/color_header"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/iv_expiry"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/btn_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_full_curve_gradient"
            android:fontFamily="@font/sfprodisplaybold"
            android:text="@string/add_image"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:backgroundTint="@null"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_border"
            android:fontFamily="@font/sfprodisplaymediumitalic"
            android:hint="@string/title"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/orange"
            android:textColorHint="@color/magenta" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_border"
            android:fontFamily="@font/sfprodisplaymediumitalic"
            android:hint="@string/date"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/orange"
            android:textColorHint="@color/magenta" />

        <EditText
            android:id="@+id/et_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_border"
            android:fontFamily="@font/sfprodisplaymediumitalic"
            android:hint="@string/cycle"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/orange"
            android:textColorHint="@color/magenta" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_border"
            android:fontFamily="@font/sfprodisplaymediumitalic"
            android:hint="@string/price"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/orange"
            android:textColorHint="@color/magenta" />

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_border"
            android:fontFamily="@font/sfprodisplaymediumitalic"
            android:hint="@string/notes"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/orange"
            android:textColorHint="@color/magenta" />

        <EditText
            android:id="@+id/et_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_border"
            android:fontFamily="@font/sfprodisplaymediumitalic"
            android:hint="@string/reminder"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/orange"
            android:textColorHint="@color/magenta" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_full_curve_gradient"
            android:fontFamily="@font/sfprodisplaybold"
            android:text="@string/add_details"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:backgroundTint="@null"/>

    </LinearLayout>
</ScrollView>