<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenu"
        android:background="@color/grey2"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:background="@drawable/empty_yellow_box"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            >
            <TextView
                android:id="@+id/main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Main Menu"
                android:fontFamily="@font/sfprodisplaybold"
                android:textStyle="bold"
                android:textSize="35dp"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add_expiry_details"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:background="@drawable/empty_yellow_box_curved"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_expiry_details"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="17sp"
            android:padding="5dp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_view_expiry_details"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="-120dp"
            android:background="@drawable/empty_yellow_box_curved"
            android:fontFamily="@font/sfprodisplaybold"
            android:padding="5dp"
            android:text="@string/view_expiry_details"
            android:textSize="17sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_record_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_records_found"
            android:layout_gravity="center"
            android:fontFamily="@font/sfprodisplaymediumitalic"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_marginStart="7dp"
            />
    </LinearLayout>
</ScrollView>